# Advent-of-Code

2020/: aoc-2020.ipynb  pyproject.toml
2020/aoc_2020/: day_1.py  utils.py
2020/tests/: test_utils.py
2021/python/: 1.py  day2.py  day_1.py  day_2.py  day_4.py  day_5.py  pyproject.toml
2021/python/day6/: python.py
2021/python/template/: python.py
2022/: README.ipynb  README.md  pyproject.toml  workbook.ipynb
2022/solutions/: day_1.py
2022/tests/: test_day_1.py
2022/utils/: solution.py
