[tool.poetry]
name = "aoc-2020"
version = "0.1.0"
description = "Advent of Code 2020"
authors = ["Clayton Yochum <claytonjy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
