[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Clayton Yochum <claytonjy@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
nbconvert = "^7.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
