[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Clayton Yochum <claytonjy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
