[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = "Advent of Code, 2021"
authors = ["Clayton Yochum <claytonjy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
